<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Activity.Profile"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/red"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_group_83"
        app:civ_border_width="1dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
       />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/positive"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:id="@+id/curr"
        android:background="@drawable/linear_style"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/current"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center"
            android:text="@string/num"
            android:paddingEnd="11dp"
            android:textColor="@color/green" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/linear_style"
        android:id="@+id/finish"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/finished"
            android:layout_marginLeft="20dp"

            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_gravity="center"
            android:text="@string/num"
            android:paddingEnd="11dp"
            android:textColor="@color/red" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/linear_style"
android:id="@+id/neww"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/New"
            android:layout_marginLeft="20dp"

            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center"
            android:text="@string/num"
            android:paddingEnd="11dp"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>






</LinearLayout>
