<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    tools:ignore="RtlCompat"
    android:background="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:scaleType="fitXY"
        android:id="@+id/logo"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_group_83"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <TextView
        android:id="@+id/text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/login"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText

            android:textAlignment="textStart"
            android:inputType="textEmailAddress"
            android:id="@+id/edtUsername"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:background="@drawable/edit_border"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:textAlignment="textStart"
            android:inputType="textPassword"
            android:id="@+id/edtPassword"
            android:hint="@string/pass"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:background="@drawable/edit_border"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
              android:id="@+id/text2"
              android:textColor="@color/black"
              android:text="@string/forgetpassword"
              android:layout_marginStart="20dp"
              android:padding="5dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
               />

          <TextView
              android:layout_toEndOf="@+id/text2"
              android:padding="5dp"
              android:textColor="@color/colorPrimaryDark"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/reset"
              android:text="@string/reset"/>
      </RelativeLayout>

    </LinearLayout>



    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:textColor="#fff"
            android:layout_margin="5dp"
            android:background="@drawable/button_style"
            android:id="@+id/btnEnter2"
            android:text="@string/enter"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnEnter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text3"
                android:textColor="@color/black"
                android:text="@string/forgetpassword"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_toEndOf="@+id/text3"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg"
                android:text="@string/register"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>