<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Activity.PaymentInfoActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/back"
            android:tint="@color/colorPrimaryDark"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/pay"
            />
    </android.support.v7.widget.Toolbar>


    <EditText
        android:layout_marginTop="30dp"
        android:paddingStart="11dp"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:id="@+id/card"
        android:textColorHint="@color/rmadys"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/card"/>

    <EditText
        android:layout_marginTop="20dp"
        android:paddingStart="11dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:id="@+id/owner"
        android:textColorHint="@color/rmadys"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/owner"/>

    <EditText
        android:layout_marginTop="20dp"
        android:paddingStart="11dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:id="@+id/cvv"
        android:textColorHint="@color/rmadys"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/cvv"/>

    <Button
        android:layout_marginTop="240dp"
        android:layout_marginBottom="40dp"
        android:layout_width="150dp"
        android:id="@+id/record"
        android:layout_height="50dp"
        android:text="@string/record"
        android:textColor="#fff"
        android:textSize="14dp"
        android:background="@drawable/button_style"
        android:layout_gravity="center"/>





</LinearLayout>
