<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/Curr"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_group_83"
        app:civ_border_width="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/User"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:id="@+id/salary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:lines="3"
            android:id="@+id/detail"
            android:maxLines="3"
            />



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        android:id="@+id/date"
        android:textColor="@color/black"
       />


</LinearLayout>
