<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Activity.AddServiceActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/back"
            android:tint="@color/colorPrimaryDark"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/addservice"
            />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn">

        <Spinner
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            />

    </RelativeLayout>

    <EditText
        android:layout_marginTop="20dp"
        android:paddingStart="11dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:id="@+id/price"
        android:textColorHint="@color/rmadys"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/price"/>
    <EditText
        android:layout_marginTop="20dp"
        android:paddingStart="11dp"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:id="@+id/tools"
        android:textColorHint="@color/rmadys"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/tool"/>
   <!-- <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn">

        <Spinner
            android:id="@+id/workDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn">

        <Spinner
            android:id="@+id/workHours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            />

    </RelativeLayout>
-->
    <Button
        android:layout_marginTop="110dp"
        android:layout_marginBottom="40dp"
        android:layout_width="150dp"
        android:id="@+id/next"
        android:layout_height="50dp"
        android:text="@string/Add"
        android:textColor="#fff"
        android:textSize="14dp"
        android:background="@drawable/button_style"
        android:layout_gravity="center"/>






</LinearLayout>
